<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hashtag Generator</string>


    <string name="top_hashtags">Top Hashtags</string>
    <string name="top_hashtag_desc">The top best hashtags that are currently trending in all the sites. Theses hashtags are handpicked and have been sorted based on the audience.</string>

    <string name="not_found">Hashtag group not found. Please check the category section for related tags.</string>
    <string name="Hashtag">Hashtags</string>
    <string name="Saved"><b>Saved</b></string>
    <string name="categories">Categories</string>
    <string name="about">About</string>


    <string name="selected_platform">Selected platform :</string>
    <string name="dialog_title_platform_selection">\t\n\nChoose Platform\n</string>
    <string name="instagram"><b>Instagram</b></string>
    <string name="instagram_content_description">You can use up to 30 hashtags on Instagram, and we suggest using all of them as they can be hidden within the caption.</string>
    <string name="instagram_stories"><b>Instagram Stories</b></string>
    <string name="instagram_stories_content_description">Instagram stories allows 10 hashtags at most. We recommend using 10 hashtags as they can be hidden by making them look smaller in the story.</string>
    <string name="tikTok"><b>TikTok</b></string>
    <string name="tiktok_content_description">TikTok allows 120 characters at most. We recommend using 5–8 most related hashtags in your TikTok video caption as best practice.</string>
    <string name="twitter"><b>Twitter</b></string>
    <string name="twitter_content_description">Twitter allows 280 characters at most. We recommend using 3–5 most related hashtags per tweet as best practice</string>
    <string name="youTube"><b>YouTube</b></string>
    <string name="youtube_content_description">YouTube allows 15 hashtags at most. YouTube warns that over-tagging will remove your video from search. We recommend using 3 most related hashtags in the title.</string>
    <string name="facebook"><b>Facebook</b></string>
    <string name="facebook_content_description">Facebook allows as many hashtags as you want. We recommend using 2–5 most related hashtags. Too many hashtags won\'t look good on a Facebook post.</string>
    <string name="linkedIn"><b>LinkedIn</b></string>
    <string name="linkedin_content_description">Linkedin allows as many hashtags as you want. We recommend using 5–8 most related hashtags. Too many hashtags won\'t look good on a LinkedIn post.</string>
    <string name="pinterest"><b>Pinterest</b></string>
    <string name="pinterest_content_description">Pinterest allows 20 hashtags at most. We recommend using 5–8 most related hashtags on your pins as best practice.</string>
    <string name="snapchat"><b>Snapchat</b></string>
    <string name="snapchat_content_description">Hashtags on snapchat works as a topic on spotlight. Although you can add many hashtags, we recommend adding 2–3 most related hashtags in spotlight.</string>
    <string name="popular_searches">Popular Searches:</string>

    <string name="customizations">Customizations</string>
    <string name="customizations_copy_tags">How many hashtags do you want to copy?</string>
    <string name="customizations_dot_above">How many dots to put above your hashtags?</string>
    <string name="customizations_add_at_end">Which hashtags do you want to add at the end?</string>
    <string name="customizations_chr_to_copy">How many Characters do you want to copy at max?</string>
    <string name="seperator_question">Select the separator you want to use to  separate the hashtags</string>

    <string name="save"><b>Save</b></string>
    <string name="copy"><b>Copy</b></string>
    <string name="remove"><b>Remove</b></string>

    <string name="search">Search</string>

    <string name="dialog_title_theme_selection">\t\n\nChoose Theme\n</string>
    <string name="theme">Theme</string>
    <string name="light">\tLight</string>
    <string name="dark">\tDark</string>
    <string name="system_default">\tSystem default</string>
    <string name="vibrations">Vibrations</string>
    <string name="haptic_description">Haptic feedback when a button is pressed</string>
    <string name="screen_on">Prevent phone from sleeping</string>
    <string name="screen_on_desc">Prevent phone from sleeping while the app is in foreground</string>
    <string name="starting_screen">Starting Screen</string>
    <string name="starting_screen_desc">Choose which screen is shown when you launch the app</string>
    <string name="dialog_title_screen_selection">\t\n\nChoose Screen\n</string>
    <string name="stools">\tTools</string>
    <string name="shashtags">\tHashtags</string>
    <string name="sfonts">\tFonts</string>
    <string name="check_for_updates">Check for Updates…</string>
    <string name="loading"><b>\nChecking for updates to enhance your app experience. Please wait a moment...\n</b></string>
    <string name="noupdatedialog"><b>\n\tYou\'re using the latest version!</b></string>
    <string name="updateavailabledialog"><b>Update is available!</b></string>
    <string name="updateavailabledialogdescription"><b>Good news! A new version of the app is available</b>.!</string>
    <string name="about_desc">Learn more about the app</string>
    <string name="general"><b>General</b></string>
    <string name="additional"><b>Additional</b></string>
    <string name="language">Language (Beta)</string>

    <string name="ok"><b>OK</b></string>
    <string name="cancel"><b>Cancel</b></string>
    <string name="update"><b>Update</b></string>
    <string name="close"><b>Close</b></string>
    <string name="not_now"><b>Not Now</b></string>
    <string name="platform_image">platform Image</string>

    <string name="contributers"><b>Contributors</b></string>
    <string name="app_desc">One of the best hashtag generator app you can find out there.</string>
    <string name="rate">Rate and Review</string>
    <string name="changelogs">ChangeLogs</string>
    <string name="report_bugs">Report Bugs / Suggest an edit</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>

    <string name="filter">Filter</string>
    <string name="filter_result">Filter Result</string>
    <string name="dialog_title_language_selection">\t\n\nChoose Language\n</string>
    <string name="popular_tags">Popular Tags</string>
    <string name="popularity">Popularity</string>
    <string name="add">Add</string>
    <string name="tcopy">\tCopy</string>
    <string name="tremove1">\tRemove1</string>
    <string name="tclear">\tClear</string>
    <string name="textFormatter">Text Formatter</string>
    <string name="to_uppercase">To Uppercase:</string>
    <string name="to_lowercase">To Lowercase:</string>
    <string name="formatter_desc">Format paragraphs into uppercase or lowercase. Capitalize every first word of the sentence or every first letter using this tool.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>