<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragments.settings.AboutFragment">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="20dp"
            android:background="@drawable/switch_rounded_about"
            android:src="@mipmap/ic_launcher_foreground"
            android:visibility="visible" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jaldi_bold"
                android:paddingTop="18dp"

                android:text="@string/app_name"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/versionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jaldi_bold"
                android:text="v1.0.0 ( 1 )"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jaldi_bold"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:text="@string/app_desc"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card1"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/card_col"
                app:cardCornerRadius="14dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">




                    <LinearLayout
                        android:id="@+id/rateAndReview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingTop="15dp"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="16dp"
                            android:paddingLeft="16dp"

                            android:src="@drawable/rate_and_review" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="19dp"
                            android:layout_marginLeft="19dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/jaldi_bold"
                            android:text="@string/rate"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />




                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerInsetStart="56dp"/>


                    <LinearLayout
                        android:id="@+id/changelogs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingTop="15dp"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="16dp"
                            android:paddingLeft="16dp"

                            android:src="@drawable/contributers" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="19dp"
                            android:layout_marginLeft="19dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/jaldi_bold"
                            android:text="@string/changelogs"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />




                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerInsetStart="56dp"/>

                    <LinearLayout
                        android:id="@+id/reportBugsCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingTop="15dp"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="16dp"
                            android:paddingLeft="16dp"

                            android:src="@drawable/settings_suggest" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="19dp"
                            android:layout_marginLeft="19dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/jaldi_bold"
                            android:text="@string/report_bugs"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />




                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerInsetStart="56dp"/>


                    <LinearLayout
                        android:id="@+id/contributers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingTop="15dp"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="16dp"
                            android:paddingLeft="16dp"

                            android:src="@drawable/contributers" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="19dp"
                            android:layout_marginLeft="19dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/jaldi_bold"
                            android:text="@string/contributers"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />




                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerInsetStart="56dp"/>


                    <LinearLayout
                        android:id="@+id/privacyPolicy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingTop="15dp"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="16dp"
                            android:paddingLeft="16dp"

                            android:src="@drawable/link" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="19dp"
                            android:layout_marginLeft="19dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/jaldi_bold"
                            android:text="@string/privacy_policy"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />




                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerInsetStart="56dp"/>


                    <LinearLayout
                        android:id="@+id/termsAndConditions"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingTop="15dp"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="16dp"
                            android:paddingLeft="16dp"

                            android:src="@drawable/link" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="19dp"
                            android:layout_marginLeft="19dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/jaldi_bold"
                            android:text="@string/terms_and_conditions"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />


                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>








        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>